--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   web:
     image: nginx:latest
+    restart: always
     ports:
       - "8301:80"
     volumes:
@@ -13,6 +14,7 @@ services:
 
   php:
     image: php:8.3-fpm
+    restart: always
     volumes:
       - ./app:/var/www/html
       - ./data:/var/www/data
